--- a/이면지.html
+++ b/이면지.html
@@ -20,3 +20,31 @@
       <a href="" class="primary_btn small">알아보기</a>
   </div>
 </section>
+
+
+
+
+오늘게획
+html 완성
+section 애니메이션 / 스크립트
+워드프레스 호스팅
+무조건 클리어
+
+
+
+ㅁ메인  / index.html
+
+ㅁ달달커피
+-매장 정보  / 달달커피스토리
+store_list.html , about.html
+
+ㅁ달달메뉴 / menus.html
+
+ㅁ커뮤니티
+문의하기, 공지사항, 이벤트/새소식
+contact.html , notice.html , event.html
+
+ㅁ푸터 (헤야함)
+
+가맹후기...?
+사진형 게시판은 리뷰로..
