메인 애니메이션 완료

--- a/event.html
+++ b/event.html
@@ -8,11 +8,21 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family= Bree + Serif & display = swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,500,700,900&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8"></script>
+  <!-- <script src="js/swiper.js" charset="utf-8"></script> -->
+  <script src="js/scroll-out.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+  <!-- <link rel="stylesheet" href="css/swiper.min.css"> -->
+
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
+  <script src="js/main.js" charset="utf-8"></script>
 </head>
 
 <body>
+  <!-- header -->
   <header class="header">
     <div class="header_infos">
       <div class="item logo">
@@ -22,16 +32,20 @@
       <div class="item">
         <i class="icon xi-home xi-2x home"></i>
         <div class="item_content">
-          <span class="item_tit">매장위치</span>
-          <!-- <span class="item_desc">서울특별시 강남구 논현동 33-10</span> -->
-          <span class="item_desc">가까운매장 알아보기</span>
+          <a href="store_list.html">
+            <span class="item_tit">매장위치</span>
+            <!-- <span class="item_desc">서울특별시 강남구 논현동 33-10</span> -->
+            <span class="item_desc">가까운매장 알아보기</span>
         </div>
+        </a>
       </div>
       <div class="item">
         <i class="icon xi-call xi-2x"></i>
         <div class="item_content">
-          <span class="item_tit">가맹문의</span>
-          <span class="item_desc">기본견적 알아보기</span>
+          <a href="contact.html">
+            <span class="item_tit">가맹문의</span>
+            <span class="item_desc">기본견적 알아보기</span>
+          </a>
         </div>
       </div>
       <div class="item">
@@ -42,18 +56,25 @@
         </div>
       </div>
     </div>
+    <div class="line_menu">
+      <a href="">클릭</a>
+    </div>
     <nav class="header_nav">
-      <ul>
-        <li class="active"><a href="/">홈</a></li>
+      <ul class="">
         <li><a href="about.html">달달커피</a></li>
-        <li><a href="menus.html">신상품/메뉴</a></li>
-        <li><a href="store_lsit.html">매장안내</a></li>
-        <li><a href="store_review.html">가맹후기</a></li>
-        <li><a href="notice.html">공지사항</a></li>
-        <li><a href="contact.html">문의하기</a></li>
+        <li><a href="menus.html">달달메뉴</a></li>
+        <li><a href="store_list.html">매장안내</a></li>
+        <li><a href="#">커뮤니티</a>
+          <ul>
+            <li><a href="event.html">이벤트/새소식</a></li>
+            <li><a href="notice.html">공지사항</a></li>
+          </ul>
+        </li>
+        <li><a href="contact.html">가맹문의</a></li>
       </ul>
     </nav>
   </header>
+  <!-- header ends -->
   <!-- intro -->
   <main id="contact">
     <section class="sub_page_showcase">
