--- a/store_list_detail.html
+++ b/store_list_detail.html
@@ -8,8 +8,17 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family= Bree + Serif & display = swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,500,700,900&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8"></script>
+  <!-- <script src="js/swiper.js" charset="utf-8"></script> -->
+  <script src="js/scroll-out.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+  <!-- <link rel="stylesheet" href="css/swiper.min.css"> -->
+
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
+  <script src="js/main.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -76,7 +85,7 @@
         <div class="store_img">
           <img src="" alt="">
         </div>
-        <p class="tit">
+        <p class="tit ani_tit">
           달달 강서구점
         </p>
         <ul class="store_infos">
