--- a/templates.html
+++ b/templates.html
@@ -32,18 +32,21 @@
       </div>
     </div>
   </div>
+  <div class="line_menu">
+    <a href="">클릭</a>
+  </div>
   <nav class="header_nav">
-    <ul>
+    <ul class="">
       <li><a href="about.html">달달커피</a></li>
       <li><a href="menus.html">달달메뉴</a></li>
       <li><a href="store_list.html">매장안내</a></li>
-      <li><a href="notice.html">커뮤니티</a>
+      <li><a href="#">커뮤니티</a>
         <ul>
           <li><a href="event.html">이벤트/새소식</a></li>
           <li><a href="notice.html">공지사항</a></li>
         </ul>
       </li>
-      <li><a href="contact.html">견적문의</a></li>
+      <li><a href="contact.html">가맹문의</a></li>
     </ul>
   </nav>
 </header>
